@@ -3,6 +3,13 @@
   !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
   ------------------------------------------------------------------------
 
+2005/02/19: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- when setting the new function type pointer for AskAddCert then set the
+  old pointer to 0 and vice versa.
+- now when a certificate has been received the user is always asked
+
+
 2005/02/18: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - fixed a bug in GWEN_LIST code (could crash the program)
